# sql-logreg

./: .dockerignore  BENCHMARK_RESULTS.md  Dockerfile  LICENSE  MADLIB_COMPARISON.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml  python_logreg.ipynb  requirements.txt  ruff.toml  setup.py  sklearn_logreg.ipynb  sql_logreg.ipynb
docs/plans/: 2026-03-01-refactor-design.md  2026-03-01-refactor-implementation.md
results/: benchmark_with_sql.json  final_benchmark.json  full_benchmark.json
scripts/: init-madlib.sh
src/: model.py
src/sqllogreg/: cli.py
src/sqllogreg/benchmark/: runner.py
src/sqllogreg/data/: loader.py  sampler.py  scaler.py  splitter.py
src/sqllogreg/metrics/: evaluator.py  result.py
src/sqllogreg/optimizers/: __init__.py  base.py  gradient.py  gradient_sql.py  lbfgs.py  lbfgs_sql.py  madlib.py  sql.py
tests/: test_base_optimizer.py  test_evaluator.py  test_gradient.py  test_gradient_sql.py  test_lbfgs.py  test_lbfgs_sql.py  test_loader.py  test_runner.py  test_sampler.py  test_scaler.py  test_splitter.py
